<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bg_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login"
    android:orientation="vertical">
    <ImageView
        android:layout_width="301dp"
        android:layout_height="201dp"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:src="@mipmap/ic_launcher_foreground" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="6dp"
        android:textStyle="bold|italic"
        android:text="@string/u_log_in"
        android:textSize="28sp"
        />

    <EditText
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:layout_gravity="top|center"
        android:hint="@string/a_email"
        android:textColorHint="@color/login_form_details"
        android:layout_marginTop="25dp"
        android:drawableLeft="@drawable/email"
        android:background="@drawable/et_bg"
        android:id="@+id/email"
        />

    <EditText
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:layout_margin="10dp"
        android:layout_gravity="top|center"
        android:layout_marginTop="30dp"
        android:drawableLeft="@drawable/password"
        android:background="@drawable/et_bg"
        android:padding="10dp"
        android:inputType="textPassword"
        android:hint="@string/a_password"
        android:textColorHint="@color/login_form_details"
        android:id="@+id/pass"
        />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="18dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/btn_bg"
        android:text="@string/log_in_b"
        android:onClick="login"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="signup"
        android:padding="12dp"
        android:text="New User? Create an Account Now!"
        android:textColor="@color/lightblue"
        android:textSize="22sp"
        android:textStyle="bold" />
</LinearLayout>